--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt==4.3.0
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
@@ -6,5 +7,6 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+striprtf==0.0.28
 Werkzeug==3.1.3
 zipp==3.21.0
